--- a/piano_cdnjs.html
+++ b/piano_cdnjs.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>MIDI Sheet Music (CDN)</title>
     <script src="https://cdn.jsdelivr.net/npm/vexflow@4.2.2/releases/vexflow-min.js"></script>
     <style>
@@ -62,7 +63,7 @@
             if (!isRest) {
                 vexKeys.forEach((k, idx) => {
                     if (k.includes('#')) {
-                        staveNote.addModifier(new Vex.Flow.Accidental('#'), idx);
+                        staveNote.addAccidental(idx, new Vex.Flow.Accidental('#'));
                     }
                 });
             }
