Add progression controls and logic for music theory exercises

--- a/piano_cdnjs.html
+++ b/piano_cdnjs.html
@@ -20,6 +20,30 @@
     <div id="status-box">Waiting for input...</div>
     
     <div id="canvas-container"></div>
+    <div id="controls" style="margin-top: 12px;">
+        <label>
+            Progression
+            <select id="progression-select">
+                <option value="pop_1564">Pop 1-5-6-4</option>
+                <option value="jazz_ii_v_i">Jazz ii–V–I</option>
+                <option value="canon">Canon (I–V–vi–iii–IV–I–IV–V)</option>
+                <option value="blues_12bar">12-Bar Blues (I7 IV7 V7)</option>
+            </select>
+        </label>
+        <label style="margin-left: 10px;">
+            Level
+            <select id="level-select">
+                <option value="easy">Easy (triads)</option>
+                <option value="intermediate">Intermediate (triads + bass root)</option>
+            </select>
+        </label>
+        <label style="margin-left: 10px;">
+            Random start
+            <input type="checkbox" id="random-start" checked>
+        </label>
+        <button id="btn-start" style="margin-left: 10px;">Start</button>
+        <button id="btn-next" style="margin-left: 6px;">Next</button>
+    </div>
     <div class="note-text" id="target-name">Target: (loading)</div>
     <div class="note-text" id="note-name">You: (rest)</div>
 
@@ -38,6 +62,14 @@
                 played: { rest: '#888', ok: '#2d8f4a', err: '#c0392b' }
             },
             advanceDelayMs: 650
+        };
+
+        // --- Progressions (C major default) ---
+        const PROGRESSIONS = {
+            pop_1564: { name: 'Pop 1-5-6-4', key: 'C', steps: ['I','V','vi','IV'] },
+            jazz_ii_v_i: { name: 'Jazz ii–V–I', key: 'C', steps: ['ii','V','I'] },
+            canon: { name: 'Canon', key: 'C', steps: ['I','V','vi','iii','IV','I','IV','V'] },
+            blues_12bar: { name: '12-Bar Blues', key: 'C', steps: ['I7','I7','I7','I7','IV7','IV7','I7','I7','V7','IV7','I7','V7'] }
         };
 
         // --- 1. VexFlow Setup ---
@@ -61,6 +93,60 @@
             if (!match) return "b/4"; // safe fallback
             const [, letter, sharp, octave] = match;
             return `${letter.toLowerCase()}${sharp ? '#': ''}/${octave}`;
+        }
+
+        // --- Theory helpers ---
+        const NOTE_TO_PC = { 'C':0, 'C#':1, 'D':2, 'D#':3, 'E':4, 'F':5, 'F#':6, 'G':7, 'G#':8, 'A':9, 'A#':10, 'B':11 };
+        const ROMAN_TO_PC_C_MAJOR = {
+            'I':0, 'ii':2, 'iii':4, 'IV':5, 'V':7, 'vi':9, 'vii':11,
+            'I7':0, 'IV7':5, 'V7':7
+        };
+
+        function midiToNoteName(midiNote) {
+            const notes = ["C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B"];
+            const octave = Math.floor(midiNote / 12) - 1;
+            const noteName = notes[midiNote % 12];
+            return `${noteName}${octave}`;
+        }
+
+        function noteNameToMidi(name) {
+            const m = name.match(/^([A-G])(#?)(\d)$/);
+            if (!m) return 60; // fallback C4
+            const [, L, sharp, octStr] = m;
+            const pc = NOTE_TO_PC[`${L}${sharp}`];
+            const octave = parseInt(octStr, 10);
+            return (octave + 1) * 12 + pc;
+        }
+
+        function makeTriadPCs(quality) {
+            if (quality === 'major') return [0,4,7];
+            if (quality === 'minor') return [0,3,7];
+            return [0,4,7];
+        }
+
+        function makeDominant7PCs() { return [0,4,7,10]; }
+
+        function romanQuality(roman) {
+            if (roman.endsWith('7')) return 'dom7';
+            return roman === roman.toUpperCase() ? 'major' : 'minor';
+        }
+
+        // Build chord notes for C major; level controls whether to add bass root
+        function chordForRomanC(roman, level='easy') {
+            const pcRoot = ROMAN_TO_PC_C_MAJOR[roman];
+            if (pcRoot == null) return { midi: [], names: [] };
+            const quality = romanQuality(roman);
+            const triadPCs = quality === 'dom7' ? makeDominant7PCs() : makeTriadPCs(quality);
+
+            // Anchor treble around octave 4
+            const rootTrebleMidi = (4 + 1) * 12 + pcRoot; // ~C4+
+            const trebleMidis = triadPCs.map(semi => rootTrebleMidi + semi);
+
+            // Optionally add bass root around octave 3
+            const bassMidi = (3 + 1) * 12 + pcRoot; // ~C3+
+            const outMidis = level === 'intermediate' ? [bassMidi, ...trebleMidis] : trebleMidis;
+            const outNames = outMidis.map(midiToNoteName);
+            return { midi: outMidis, names: outNames };
         }
 
         function splitByClef(noteNames = []) {
@@ -163,23 +249,19 @@
             vf.context.restore();
         }
 
-        function midiToNoteName(midiNote) {
-            const notes = ["C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B"];
-            const octave = Math.floor(midiNote / 12) - 1;
-            const noteName = notes[midiNote % 12];
-            return `${noteName}${octave}`;
-        }
-
         // --- 3. App State ---
         const state = {
             activeNotes: new Set(),
             targetNotes: [],
-            advanceTimer: null
+            advanceTimer: null,
+            progressionName: 'pop_1564',
+            level: 'easy',
+            currentIndex: 0
         };
 
-        function setTarget(notes) {
-            state.targetNotes = notes;
-            const targetNames = notes.map(midiToNoteName);
+        function setTargetMidiAndNames(midi, names) {
+            state.targetNotes = midi;
+            const targetNames = names;
             document.getElementById("target-name").innerText = `Target: ${targetNames.join(" · ")}`;
             render();
         }
@@ -213,31 +295,33 @@
             scheduleAdvance(isCorrect && playedSorted.length > 0);
         }
 
-        // --- 4. Target generation ---
-        function randomInt(min, max) {
-            return Math.floor(Math.random() * (max - min + 1)) + min;
+        // --- 4. Progression runner ---
+        function getCurrentProgression() {
+            return PROGRESSIONS[state.progressionName] || PROGRESSIONS.pop_1564;
         }
 
-        function makeSingleNote() {
-            // Comfortable range C3 (48) to C5 (72)
-            return [randomInt(48, 72)];
-        }
-
-        function makeMajorTriad() {
-            const roots = [];
-            for (let n = 48; n <= 64; n++) {
-                if (n + 7 <= 72) roots.push(n);
-            }
-            const root = roots[randomInt(0, roots.length - 1)];
-            return [root, root + 4, root + 7];
-        }
-
-        function pickNextTarget() {
-            const isChord = Math.random() < 0.4;
-            const target = isChord ? makeMajorTriad() : makeSingleNote();
+        function startProgression(randomStart=true) {
+            const prog = getCurrentProgression();
+            const steps = prog.steps;
+            state.currentIndex = randomStart ? Math.floor(Math.random() * steps.length) : 0;
             state.activeNotes.clear();
             clearAdvance();
-            setTarget(target);
+            showCurrentStep();
+        }
+
+        function showCurrentStep() {
+            const prog = getCurrentProgression();
+            const roman = prog.steps[state.currentIndex];
+            const chord = chordForRomanC(roman, state.level);
+            setTargetMidiAndNames(chord.midi, chord.names);
+        }
+
+        function nextStep() {
+            const prog = getCurrentProgression();
+            state.currentIndex = (state.currentIndex + 1) % prog.steps.length;
+            state.activeNotes.clear();
+            clearAdvance();
+            showCurrentStep();
         }
 
         function clearAdvance() {
@@ -255,7 +339,7 @@
             if (state.advanceTimer) return;
             state.advanceTimer = setTimeout(() => {
                 state.advanceTimer = null;
-                pickNextTarget();
+                nextStep();
             }, CONFIG.advanceDelayMs);
         }
 
@@ -277,7 +361,8 @@
                 });
             }
             // Start with an initial target once MIDI is ready
-            pickNextTarget();
+            const randomStart = document.getElementById('random-start').checked;
+            startProgression(randomStart);
         }
 
         function onFailure() {
@@ -312,6 +397,25 @@
                 render();
             }
         }
+
+        // --- 6. Controls wiring ---
+        document.getElementById('progression-select').addEventListener('change', (e) => {
+            state.progressionName = e.target.value;
+            startProgression(document.getElementById('random-start').checked);
+        });
+
+        document.getElementById('level-select').addEventListener('change', (e) => {
+            state.level = e.target.value;
+            showCurrentStep();
+        });
+
+        document.getElementById('btn-start').addEventListener('click', () => {
+            startProgression(document.getElementById('random-start').checked);
+        });
+
+        document.getElementById('btn-next').addEventListener('click', () => {
+            nextStep();
+        });
     </script>
 </body>
 </html>
